Basic articles finished

--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Peluquería / Fryzjer para la boda.">
     <meta name="author" content="Javier Oliver">
 
     <title>Peluquería / Fryzjer</title>
@@ -108,7 +108,7 @@
                 <div class="text-justify" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
                      
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-5 text_align_mobile">
                        <p>&emsp;Hay posibilidad de pedir cita para peinarse el día de la boda. Si deseas ir a la peluquería, avísanos por email o bien llámanos personalmente al número que aparece en la invitación</p>
                        <h2 align=left>Mándanos un email</h2> 
                     <!-- forma de contacto                                mi boton para español-->
@@ -164,7 +164,7 @@
                     </div>
 
                     </div>
-                    <div class="col-md-offset-1 col-md-5">
+                    <div class="col-md-offset-1 col-md-5 text_align_mobile">
                        <p>&emsp;Istnieje możliwość zapisania się do fryzjera. Dziewczyny jeśli któraś z Was chciałaby pójść do fryzjera napiszcie do nas bądź skontaktujcie się z nami osobiście</p>
                        <h2 align=left>Wyślij do nas zapytanie</h2>                   
                      <!-- forma de contacto                                polaco-->
