--- a/pages/slub.html
+++ b/pages/slub.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Ślub po Hiszpańsku">
+    <meta name="author" content="Javier Oliver">
 
-    <title>Tradición de la boda Polaca</title>
+    <title>Zwyczaje Hiszpańskie</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2>ZWYCZAJE HISZPAŃSKIE</h2>
+                        <h2>Ślub po Hiszpańsku</h2>
                     </div>
                 </div>
             </div>
