minor change in the index

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top" >
-                      <span class="light">Basia</span><span style="color:red">&hearts;</span>Javy
+                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
 
