Added survival words spanish-polish. Cosmetic changes
I used open sans for the nav bar which supports polish

--- a/pages/boda-polaca.html
+++ b/pages/boda-polaca.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -60,7 +61,7 @@
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
                             <li><a class="links" href="peluqueria.html">Peluquería</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
+                            <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
@@ -166,8 +167,28 @@
                         </div>
                     </div>
                     </p>
-                    <p>En la fiesta, normalmente, hay un grupo de música en directo que suele animar la fiesta y suele marcar el ritmo de ella. Pueden sugerir cuando se va a bailar o cuando se se vuelve a la mesa a brindar con vodka. Durante la fiesta hay brindis, se puede cantar “Sto Lat”, y otras canciones. Por ejemplo, se canta una canción en la cual se dice que el vodka está amargo y seguirá amargo hasta que no se besen los novios. Además hay juegos donde los invitados participan y al ganador se le dan premios.<br><br>
+                    <p>En la fiesta, normalmente, hay un grupo de música en directo que suele animar la fiesta y suele marcar el ritmo de ella. Pueden sugerir cuando se va a bailar o cuando se se vuelve a la mesa a brindar con vodka. Durante la fiesta hay brindis, se puede cantar “Sto Lat”, y otras canciones. Por ejemplo, se canta una canción en la cual se dice que el vodka está amargo y seguirá amargo hasta que no se besen los novios. Además hay juegos donde los invitados participan y al ganador se le dan premios. Escucharás música que te extrañará en la pista y a los polacos los verás bailando como posesos; ¡es el <b>Disco Polo!</b> <br><br></p>
 
+                   <div class="row">
+                        <div class="col-md-6">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe  align="center" class="embed-responsive-item"
+                                    src="https://www.youtube.com/embed/JvxG3zl_WhU">
+                                </iframe>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe  align="center" class="embed-responsive-item"
+                                    src="https://www.youtube.com/embed/_ImdyAMaSDU">
+                                </iframe>
+                            </div>
+                        </div>
+
+                    </div>
+                    <p>
+                    <br><br>
                     La fiesta sigue esa dinámica hasta la llegada de la medianoche donde se realiza otra de las tradiciones de las bodas polacas: el <b>oczepiny</b>. Oficialmente marca el primer día de la vida de la novia como esposa. La dama de honor retira el velo de la novia, y cuando éste ha sido retirado, la novia lo lanza a las solteras presentes en la celebración. Luego, el novio lanza la corbata o pajarita a los solteros presentes en la sala. Él que atrape la corbata y la chica soltera que atrapó el velo forman la siguiente pareja en “casarse”. Esta pareja hace su primer baile y luego la fiesta continúa.
 
                     <br><br>
@@ -201,6 +222,17 @@
                         <br><br>
                         11. Apréndete el Sto Lat. Se cantará varias veces a lo largo de la noche. ¡Además sirve también para un cumpleaños! 
                         <br><br>
+                        12. Acostúmbrate al <i>Disco Polo</i>, ¡la música de panchangueo local! 
+                        <br><br>
+                        <div class="row">
+                            <div class="col-md-6 col-md-offset-3">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe  align="center" class="embed-responsive-item"
+                                        src="https://www.youtube.com/embed/X_xvtriEZs4">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
                         </p>
                     </div>
 
