Alojamiento added. Cosmetic changes added too.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <li>
                         <a class="page-scroll force_collapse" href="#contact">Contacto<br>Kontakt</a>
                     </li>
-                    <li>
+                   <li>
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
@@ -71,6 +71,8 @@
                             <li><a class="links" href="pages/boda-polaca.html">¿Una Boda Polaca?</a></li>
                             <li><a class="links" href="pages/peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="pages/polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="pages/alojamiento.html">Alojamiento</a></li>
+                            <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
@@ -84,7 +86,8 @@
                             <li><a class="links" href="pages/evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="pages/slub.html">Ślub po Hiszpańsku</a></li>
                             <li><a class="links" href="pages/peluqueria.html">Fryzjer</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
+                            <li><a class="links" href="pages/polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
+                            <li><a class="links" href="pages/alojamiento.html">Noclegi</a></li>
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
