--- a/pages/boda-polaca.html
+++ b/pages/boda-polaca.html
@@ -54,14 +54,16 @@
                         <a href="#page-top"></a>
                     </li>
                     
-                   <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Enlaces<span class="caret"></span></a>
+                                      <li>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
                             <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
+                            <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
@@ -69,13 +71,14 @@
 
                     <!-- PL-->
                      <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Linki<span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
+                            <li><a class="links" href="alojamiento.html">Noclegi</a></li>
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
@@ -117,11 +120,20 @@
 
 
                     <h2 class="gray_with_black_stroke">INTRODUCCIÓN</h2>
+                    <div class="row">
+                    
+                    <div class="col-md-9  col-xs-12"><p>
+                    Aunque a grosso modo la dinámica de una boda polaca es muy similar a nuestra tradición española, hemos querido escribir este artículo para explicar las diferencias y curiosidades que encontraréis el 20 y 21 de agosto.</p>
+                    </div>
+                        <div class="col-xs-12 col-md-3">
+                            <div align="center">
+                                <img style="max-width:300px;" class="img-responsive "
+                                    src="../img/esp_pl_grad.jpg">                        
+                            </div>
+                        </div>
+                    </div>
 
-                    <p>
-                    &emsp;Aunque a grosso modo la dinámica de una boda polaca es muy similar a nuestra tradición española, hemos querido escribir este artículo para explicar las diferencias y curiosidades que encontraréis el 20 y 21 de agosto.</p>
-
-                    <h2 class="gray_with_black_stroke">PREPARACIÓN</h2>
+                    <h2 class="gray_with_black_stroke"><br>PREPARACIÓN</h2>
                     <p>Al igual que en España, las bodas tradicionales en Polonia son católicas. En la costumbre polaca, los novios se preparan por separado con sus respectivas familias. Cuando el novio está preparado, sale en busca de la novia a su casa y, una vez reunida la pareja, los padres de cada uno deben bendecirlos para su matrimonio. Seguidamente, los novios se dirigen juntos a la iglesia donde esperan los invitados a la ceremonia.
                     </p>
 
