--- a/pages/polaco-supervivencia.html
+++ b/pages/polaco-supervivencia.html
@@ -72,6 +72,7 @@
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
                             <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -86,7 +87,8 @@
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
+                            <li><a class="links" href="alojamiento.html">Noclegi</a></li>
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
@@ -105,7 +107,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
                         <h2>¡Polaco de superviciencia!</h2>
-                        <h3 class="text-uppercase">Guía básica de conversación en polaco</h3>
+                        <h2>Mini przewodnik języka polskiego dla Hiszpanów</h2>
                     </div>
                 </div>
             </div>
@@ -114,7 +116,7 @@
 
 
 
-    <article  style="background-color:#fff;" class="article-body">
+    <div  style="background-color:#fff;" class="article-body">
         <div class="container">
             <div class="row">
                 <div class="text_align_mobile" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">                 
@@ -162,23 +164,33 @@
                             Gratuluję! / <i>Gratulúie!</i>
                             <br> <br> 
 
-
-
-                            <b>Hola / Adiós</b> (informal, se suele usar solo entre gente que se conoce) <br> 
-                            Cześć / <i>chesch</i>
+                            <b>Hola / Adiós</b><br> 
+                            Cześć / <i>chesch.</i> 
+                            <br><b>NOTA:</b> informal, se suele usar solo entre gente que se conoce.
                             <br> <br> 
-                            <b>Buenos días o Buenas tardes:</b> (saludo formal, éste se usa cuando no cononces) <br> 
+                            <b>Hasta luego</b><br> 
+                            Pa Pa / <i>Papá</i> 
+                            <br><b>NOTA:</b> informal, se suele usar solo entre gente que se conoce.
+                            <br> <br> 
+
+                            <b>Buenos días o Buenas tardes:</b><br> 
                             Dzień dobry / <i>Dyeñ dóbre</i>
+                            <br><b>NOTA:</b> saludo formal, éste se usa cuando no cononces.
                             <br> <br> 
-                            <b>Adiós</b> (saludo formal, éste se usa cuando no cononces) <br> 
-                            Do widzenia / <i>Do viyénia</i>
-                            <br> <br> 
+
                             <b>Buenas noches</b> <br> 
                             Dobry wieczór / <i>Dobre viétchur</i>
                             <br> <br> 
-                            <b>Buenas noches</b> (p.e. antes de acostarse) <br> 
+                            <b>Buenas 
+                            noches</b> (p.e. antes de acostarse) <br> 
                             Dobranoc / <i>Dobránots</i>
                             <br> <br> 
+
+                            <b>Adiós</b><br> 
+                            Do widzenia / <i>Do viyénia</i>
+                            <br><b>NOTA:</b> saludo formal, éste se usa cuando no cononces.
+                            <br> <br> 
+
                             <b>Hasta pronto / nos vemos</b><br> 
                             Na razie / <i>Na ráyie</i>
                         </p>
@@ -198,7 +210,7 @@
                             Jak ma Pan/Pani na imię - Jak masz na imię? / <i>Iák mash pan/páni na ímieun - Iák mash na ímieun</i>
                             <br> <br> 
 
-                            <b>Me llamo</b><br> 
+                            <b>Me llamo Pepe</b><br> 
                             Nazywam się Pepe / <i>Nasévam sieun Pepe</i>
                             <br> <br> 
 
@@ -210,13 +222,26 @@
 
                     <h2 id="ligoteo" class="gray_with_black_stroke"><br><br>LIGOTEO Y OTRAS</h2>
                         <p>
-                            Unas cuantas comidín, algunas usarlas con preucación :D<br> 
+                            Unas cuantas frases comidín, algunas usarlas con preucación :D<br>
+
+                            <b><br>No entiendo</b><br> 
+                            Nie rozumiem  / <i>Nie rosúmiem</i>
+                            <br> <br> 
+
+                            <b>No hablo polaco</b><br> 
+                            Nie mówię po polsku  / <i>Nie muvie po polsku</i>
+                            <br> <br> 
+
+                            <b>¿Hablas español? - ¿Habla usted español?</b><br> 
+                            Czy mówisz po hiszpańsku? - Czy Pan/Pani mówi po hiszpańsku? / <i>Che múvish po jishpañsku? - Che Pan/Pani múvi po jishpañsku?</i>
+                            <br> <br> 
                             
-                            <b><br> ¡Tía buena! - ¡Bonito culo!</b> (la chica se puede molestar, usarla con gracia)<br> 
+                            
+                            <b>¡Tía buena! - ¡Bonito culo!</b> (la chica se puede molestar, usarla con gracia)<br> 
                             Ładna dupa! / <i>Uadna dupa!</i>
                             <br> <br> 
 
-                            <b>¡Qué ojos tan bonitos!</b><br> 
+                            <b>¡Qué ojos tan bonitos! - Usted tiene los ojos bonitos</b><br> 
                             Masz piękne oczy! - Pani ma piękne oczy / <i>Mash piéukne ótche - Pani ma piéukne ótche</i>
                             <br> <br> 
 
@@ -253,7 +278,7 @@
                 </div>
             </div>
         </div>
-    </article>
+    </div>
 
     <!-- Footer -->
     <footer>
