--- a/pages/evento.html
+++ b/pages/evento.html
@@ -54,14 +54,16 @@
                         <a href="#page-top"></a>
                     </li>
                     
-                   <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Enlaces<span class="caret"></span></a>
+                    <li>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
                             <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
+                            <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
@@ -69,13 +71,14 @@
 
                     <!-- PL-->
                      <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Linki<span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
+                            <li><a class="links" href="alojamiento.html">Noclegi</a></li>
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
