--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -55,29 +55,27 @@
                     </li>
                     
                    <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Enlaces<span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
                             <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
+                            <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
                         </ul>
                     </li>
 
                     <!-- PL-->
                      <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Linki<span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
+                            <li><a class="links" href="alojamiento.html">Noclegi</a></li>
                         </ul>
                     </li>
 
@@ -110,7 +108,7 @@
                      
                 <div class="row">
                     <div class="col-md-5 text_align_mobile">
-                       <p>&emsp;Hay posibilidad de pedir cita para peinarse el día de la boda. Si deseas ir a la peluquería, avísanos por email o bien llámanos personalmente al número que aparece en la invitación</p>
+                       <p><br>Hay posibilidad de pedir cita para peinarse el día de la boda. Si deseas ir a la peluquería, avísanos por email o bien llámanos personalmente al número que aparece en la invitación</p>
                        <h2 align=left>Mándanos un email</h2> 
                     <!-- forma de contacto                                mi boton para español-->
 
@@ -166,7 +164,7 @@
 
                     </div>
                     <div class="col-md-offset-1 col-md-5 text_align_mobile">
-                       <p>&emsp;Istnieje możliwość zapisania się do fryzjera. Dziewczyny jeśli któraś z Was chciałaby pójść do fryzjera napiszcie do nas bądź skontaktujcie się z nami osobiście</p>
+                       <p><br>Istnieje możliwość zapisania się do fryzjera. Dziewczyny jeśli któraś z Was chciałaby pójść do fryzjera napiszcie do nas bądź skontaktujcie się z nami osobiście</p>
                        <h2 align=left>Wyślij do nas zapytanie</h2>                   
                      <!-- forma de contacto                                polaco-->
                     <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h1></div>
