Added warsaw to the web. I will fill it later

--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
 
                             <li><a class="links" href="pages/evento.html">El Evento</a></li>
                             <li><a class="links" href="pages/boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="pages/peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="pages/polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="pages/warsaw.html">Varsovia</a></li>
+                            <li><a class="links" href="pages/peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="pages/alojamiento.html">Alojamiento</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
 
@@ -85,11 +83,10 @@
 
                             <li><a class="links" href="pages/evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="pages/slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="pages/polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
+                            <li><a class="links" href="pages/warsaw.html">Warszawa</a></li>
                             <li><a class="links" href="pages/peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="pages/polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
                             <li><a class="links" href="pages/alojamiento.html">Noclegi</a></li>
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
                 </ul>
