--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -60,8 +60,9 @@
 
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="warsaw.html">Varsovia</a></li>
+                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
                         </ul>
                     </li>
@@ -73,12 +74,12 @@
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
+                            <li><a class="links" href="warsaw.html">Warszawa</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
                             <li><a class="links" href="alojamiento.html">Noclegi</a></li>
                         </ul>
                     </li>
-
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -91,8 +92,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2>¿Necistas peluquería para la boda?</h2>
-                        <h2>Chcesz uczesać się na wesele? </h2>
+                        <h2 style="text-align: center">¿Necistas peluquería para la boda?</h2>
+                        <h2 style="text-align: center">Chcesz uczesać się na wesele? </h2>
                     </div>
                 </div>
             </div>
