--- a/pages/polaco-supervivencia.html
+++ b/pages/polaco-supervivencia.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Guía práctica de frases y palabras en polaco. Lo básico para sobrevivir">
+    <meta name="description" content="Guía práctica de frases y palabras en polaco. Lo básico para sobrevivir en Polonia.">
     <meta name="author" content="Javier Oliver">
 
     <title>Palabras y frases en polaco</title>
@@ -70,12 +70,10 @@
 
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="warsaw.html">Varsovia</a></li>
+                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
 
@@ -86,14 +84,12 @@
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
+                            <li><a class="links" href="warsaw.html">Warszawa</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
                             <li><a class="links" href="alojamiento.html">Noclegi</a></li>
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
-
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -106,8 +102,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2>¡Polaco de superviciencia!</h2>
-                        <h2>Mini przewodnik języka polskiego dla Hiszpanów</h2>
+                        <h2 style="text-align: center">¡Polaco de superviciencia!</h2>
+                        <h2 style="text-align: center">Mini przewodnik języka polskiego dla Hiszpanów</h2>
                     </div>
                 </div>
             </div>
