--- a/pages/evento.html
+++ b/pages/evento.html
@@ -54,18 +54,16 @@
                         <a href="#page-top"></a>
                     </li>
                     
-                    <li>
+                   <li>
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="polaco-supervivencia.html">Guía de polaco</a></li>
+                            <li><a class="links" href="warsaw.html">Varsovia</a></li>
+                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <li><a class="links" href="alojamiento.html">Alojamiento</a></li>
-                            <!-- <li><a href="#">Something else here</a></li> -->
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
 
@@ -76,11 +74,10 @@
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
+                            <li><a class="links" href="warsaw.html">Warszawa</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>
                             <li><a class="links" href="alojamiento.html">Noclegi</a></li>
-                            <!-- <li role="separator" class="divider"></li>-->
-                            <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
 
