--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -164,7 +164,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks_es.html"/>
+                                        <input type="hidden" name="_next" value="pages/thanks_es.html"/>
 
                                     </form>
                                 </div>
@@ -215,7 +215,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                             <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button>
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks_pl.html"/>
+                                        <input type="hidden" name="_next" value="pages/thanks_pl.html"/>
                                     </form>
                                 </div>
 
