Added 404 and language definitions

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Gracias por tu email">
+    <meta name="description" content="ERROR 404">
     <meta name="author" content="Javier Oliver">
     <title>Historias de una Boda en Polonia</title>
 
@@ -38,22 +38,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
     <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand page-scroll" href="../index.html">
-                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
-                </a>
-            </div>
-        </div>
-    </nav>
-    <header class="thanks">
+
+    <header class="error">
         <div class="intro-body">
                 <div class="container">
 
                         <div class="bottom-aligned-text white_with_gray_stroke">
-                            <h2 >¡Gracias por tu e-mail!</h2>
-                            <h2> ¡Responderemos a la mayor brevedad posible!<br><br></h2>
+                            <h1 >404</h1>
+                            <h2> Sorry we didn't find that page!<br><br></h2>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
@@ -63,7 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </div>
 
                          <div class="col-md-8 col-md-offset-2">
-                             <h5><br> Página principal</h5>
+                             <h5><br> Main page</h5>
                         </div>
 
 
