--- a/pages/alojamiento.html
+++ b/pages/alojamiento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -78,9 +78,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
 
                     <!-- PL-->
-                     <li>
+                     <li lang="pl">
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
-                        <ul id="ul_enlaces" class="dropdown-menu">
+                        <ul  id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
@@ -177,7 +177,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
 
                     </div>
-                    <div class="col-md-offset-1 col-md-5 text_align_mobile">
+                    <div lang="pl" class="col-md-offset-1 col-md-5 text_align_mobile">
                         <p><br>
                             Drodzy Goście, jeśli ktoś z Was chciałby wcześniej przyjechać do Ełku, np. zwiedzić nasze piękne miasto i jego okolice, pomożemy Wam z organizacją noclegu. Wystarczy się z nami skontaktować podając konkretne daty, nie wliczając w nie nocy po weselu, a udzielimy Wam dodatkowych informacji na temat możliwości noclegowych.   
                         </p>
