--- a/pages/polaco-supervivencia.html
+++ b/pages/polaco-supervivencia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -88,7 +88,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
 
                     <!-- PL-->
-                     <li>
+                     <li lang="pl">
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
                         <h2 style="text-align: center">¡Polaco de superviciencia!</h2>
-                        <h2 style="text-align: center">Mini przewodnik języka polskiego dla Hiszpanów</h2>
+                        <h2 lang="pl" style="text-align: center">Mini przewodnik języka polskiego dla Hiszpanów</h2>
                     </div>
                 </div>
             </div>
