--- a/pages/slub.html
+++ b/pages/slub.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
 
@@ -64,7 +64,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="#page-top"></a>
                     </li>
                     
-                   <li>
+                   <li lang="es">
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
