--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 
 <head>
@@ -10,7 +10,7 @@
     <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Aquí encontrarás información de interes referente al evento del 20.08.16">
     <meta name="author" content="Javier Oliver">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    <meta http-equiv="Content-Language" content="es, pl"/>
     <title>Historias de una Boda en Polonia</title>
 
     <!-- Bootstrap Core CSS -->
@@ -89,7 +89,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
 
                     <!-- PL-->
-                     <li>
+                     <li lang="pl">
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
@@ -148,8 +148,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
 
                 <div class="col-md-5">
-                    <h2 align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
-                    <p class="lead text_align_mobile">Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
+                    <h2 lang="pl" align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
+                    <p lang="pl" class="lead text_align_mobile">Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
                     <br><br>W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile.
                     </p>
                 </div>
@@ -226,8 +226,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <p>&emsp;</p>
                 </div>
 
-                <div class="col-md-5">
-                    <h2 align=left>Wyślij do nas zapytanie</h2>
+                <div lang="pl" class="col-md-5">
+                    <h2  align=left>Wyślij do nas zapytanie</h2>
                     <p class="lead text_align_mobile">Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
                      <!-- forma de contacto                                polaco-->
                     <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h1></div>
