--- a/pages/boda-polaca.html
+++ b/pages/boda-polaca.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
 
                     <!-- PL-->
-                     <li>
+                     <li lang="pl">
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
