--- a/pages/evento.html
+++ b/pages/evento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
 
                     <!-- PL-->
-                     <li>
+                     <li lang="pl">
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
@@ -178,8 +178,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="col-md-1"></div>
 
                     <div class="col-md-5">
-                    <h2>Drodzy Goście</h2>
-                    <p>
+                    <h2 lang="pl">Drodzy Goście</h2>
+                    <p lang="pl">
                     Nasze wesele potrwa dwa dni. Szczegółowe informacje na temat pierwszego dnia znajdziecie powyżej. Nocleg po weselu jest zapewniony dla wszystkich zaproszonych. Bliższe informacje zostaną udzielone zainteresowanym przed weselem. Na następny dzień, tj w niedziele będziemy kontynuowali zabawę w tym samym miejscu. Zacznie się ok godz 12-13 (do potwierdzenia) i potrwa do ok godz. 17-18.
                     </p>
                     </div>
