--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -78,9 +78,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </li>
 
                     <!-- PL-->
-                     <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
-                        <ul id="ul_enlaces" class="dropdown-menu">
+                     <li lang="pl">
+                        <a data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
+                        <ul lang="pl" id="ul_enlaces" class="dropdown-menu">
 
                             <li><a class="links" href="evento.html">Wydarzenie</a></li>         
                             <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
@@ -103,7 +103,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
                         <h2 style="text-align: center">¿Necistas peluquería para la boda?</h2>
-                        <h2 style="text-align: center">Chcesz uczesać się na wesele? </h2>
+                        <h2 lang="pl" style="text-align: center">Chcesz uczesać się na wesele? </h2>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
 
                     </div>
-                    <div class="col-md-offset-1 col-md-5 text_align_mobile">
+                    <div lang="pl" class="col-md-offset-1 col-md-5 text_align_mobile">
                        <p><br>Istnieje możliwość zapisania się do fryzjera. Dziewczyny jeśli któraś z Was chciałaby pójść do fryzjera napiszcie do nas bądź skontaktujcie się z nami osobiście</p>
                        <h2 align=left>Wyślij do nas zapytanie</h2>                   
                      <!-- forma de contacto                                polaco-->
