--- a/pages/thanks_es.html
+++ b/pages/thanks_es.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Gracias por tu email">
     <meta name="author" content="Javier Oliver">
-    <title>Historias de una Boda en Polonia</title>
+    <title>Gracias</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
