--- a/pages/thanks_pl.html
+++ b/pages/thanks_pl.html
@@ -1,15 +1,15 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Gracias por tu email">
+    <meta name="description" content="Dziękuję za Twojego maila">
     <meta name="author" content="Javier Oliver">
-    <title>Historias de una Boda en Polonia</title>
+    <title>Dziękujemy bardzo</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
