--- a/404.html
+++ b/404.html
@@ -43,9 +43,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="intro-body">
                 <div class="container">
 
-                        <div class="bottom-aligned-text white_with_gray_stroke">
-                            <h1 >404</h1>
-                            <h2> Sorry we didn't find that page!<br><br></h2>
+                        <div class="white_with_gray_stroke">
+                            <h1 style="text-align: center">404</h1>
+                            <h2 style="text-align: center"> Sorry we didn't find that page!<br><br></h2>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
