--- a/404.html
+++ b/404.html
@@ -39,13 +39,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <!-- Navigation -->
 
-    <header class="error">
-        <div class="intro-body">
+    <header>
+        <div class="error">
                 <div class="container">
 
                         <div class="white_with_gray_stroke">
-                            <h1 style="text-align: center">404</h1>
-                            <h2 style="text-align: center"> Sorry we didn't find that page!<br><br></h2>
+                            <h1 style="text-align: center">404<br>
+                            Sorry we didn't find that page!<br><br></h1>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
